# recipes

./: .gitignore  README.md  TODO.md  foods.py  new_recipe_template.py  pyproject.toml  read.py  recipe_lib.py  recipes2.py  requirements.txt  select_recipes.py  shopping_list.md  shopping_list.py  spice_blends.md  web_app.service
cajun_chicken_linguine/: metadata.yaml  recipe.md
italian_pork_sausage_gnocchi_bake/: shopping_list.csv
old/: markdown_view.html  read.py
output/: shopping_list.md
recipe_core/: foods.py  foods.yaml  gemini_importer.py  mailer.py  recipe_lib.py  shopping_list.py  test.py  units.py
recipe_core/test/butternut_squash_soup/: recipe.yaml
recipe_core/test/test_recipe/: recipe.yaml
recipe_starter_files/: recipe.md  recipe.yaml
recipes/: create_new_recipe_entry  new_recipe_template.py
recipes/TODO/: README
recipes/a_done/black_bean_and_pepper_jack_tostadas/: shopping_list.csv
recipes/a_done/cajun_chicken_linguine/: recipe.md  shopping_list.csv
recipes/a_done/salmon/: recipe.md
recipes/cajun_chicken_linguine/: shopping_list.csv
recipes/clam_chowder/: shopping_list.csv
recipes/german_pancakes/: README
recipes/honey_lime_enchiladas/: shopping_list.csv
recipes/moraccan_chickpea_and_apricot_tagine/: recipe.md
recipes/naan_bread/: metadata.yaml
recipes/pico_de_gallo/: shopping_list.csv
recipes/spiced_chickpea_basmati_bowls/: metadata.yaml
recipes/tzatziki_sauce/: shopping_list.csv
web/: app.py  config.yaml  import_recipes.py  select_recipes.py
web/templates/: base.html  editor.html  index.html  recipes_list.html
(+52 files in other folders)
